--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_KEY%&libraries=services,clusterer,drawing"
     ></script>
+    <!-- &libraries=services,clusterer,drawin -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
